auto publishing updates to notebooks

--- a/cake_eating_numerical.ipynb
+++ b/cake_eating_numerical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9fc8fcf6",
+   "id": "4e313a94",
    "metadata": {},
    "source": [
     "# Cake Eating: Numerical Methods"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046e5d5b",
+   "id": "3851d78f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,18 +31,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2ba7680",
+   "id": "494b1cfe",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "!pip install interpolation"
+    "!pip install interpolation quantecon"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca3033b0",
+   "id": "7aec51a5",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9d4159",
+   "id": "6ce2962d",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c325c80",
+   "id": "227bf5de",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f368c0cd",
+   "id": "7eb90fb3",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e9a416",
+   "id": "c506c7dd",
    "metadata": {},
    "source": [
     "## Reviewing the Model\n",
@@ -97,7 +97,7 @@
     "<a id='equation-bellman-cen'></a>\n",
     "$$\n",
     "v(x) = \\max_{0\\leq c \\leq x} \\{u(c) + \\beta v(x-c)\\}\n",
-    "\\quad \\text{for all } x \\geq 0. \\tag{15.1}\n",
+    "\\quad \\text{for all } x \\geq 0. \\tag{16.1}\n",
     "$$\n",
     "\n",
     "where $ u $ is the CRRA utility function."
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "353e4cde",
+   "id": "dbc391d6",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e0eaf6",
+   "id": "f70af0c3",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb327ae",
+   "id": "c0b47c80",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the Cake Eating Problem."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee20d41",
+   "id": "12835d97",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6531124",
+   "id": "d3641b45",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d68fee62",
+   "id": "b69aca35",
    "metadata": {},
    "source": [
     "Now let’s define the CRRA utility function."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b17fd6c5",
+   "id": "06f21dbb",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d053fed3",
+   "id": "015be46a",
    "metadata": {},
    "source": [
     "### The Bellman Operator\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf87df6",
+   "id": "6c901a22",
    "metadata": {
     "hide-output": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f28b7f",
+   "id": "98ab684f",
    "metadata": {},
    "source": [
     "In order to create a vectorized function using `state_action_value`, we use [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html).\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63339f1",
+   "id": "1d8ef0b0",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75669eef",
+   "id": "5a05abd2",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cca83d43",
+   "id": "0202d0cf",
    "metadata": {},
    "source": [
     "Let’s start by creating a Cake Eating Model instance using the default parameterization."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d4bf61",
+   "id": "9be93b34",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23dfb2e9",
+   "id": "fd75c1db",
    "metadata": {},
    "source": [
     "Now let’s see the iteration of the value function in action.\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15903fa9",
+   "id": "b65b5551",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d90378",
+   "id": "ca2a796c",
    "metadata": {},
    "source": [
     "Let’s introduce a wrapper function called `compute_value_function`\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240828be",
+   "id": "4252de0a",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d2f3260",
+   "id": "22f85327",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "893aad79",
+   "id": "07f4b122",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e2394d",
+   "id": "b648ba03",
    "metadata": {},
    "source": [
     "Next let’s compare it to the analytical solution."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0165a36d",
+   "id": "c87361ff",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31c84ba4",
+   "id": "f07f25e7",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "645cb77c",
+   "id": "406bc69f",
    "metadata": {},
    "source": [
     "### Policy Function\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a346d13f",
+   "id": "65f3764f",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecbf9c01",
+   "id": "9def91f0",
    "metadata": {},
    "source": [
     "Now let’s pass the approximate value function and compute optimal consumption:"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde4946e",
+   "id": "1a79b35a",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "216edf55",
+   "id": "cd538332",
    "metadata": {},
    "source": [
     "Let’s plot this next to the true analytical solution"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2d1e5d",
+   "id": "b86ade4b",
    "metadata": {
     "hide-output": false
    },
@@ -570,140 +570,134 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36af22fc",
+   "id": "97d2ac48",
    "metadata": {},
    "source": [
-    "## NumPy implementation\n",
+    "## Numba implementation\n",
     "\n",
     "This section of the lecture is directly adapted from [this lecture](https://python.quantecon.org/cake_eating_numerical.html)\n",
-    "for the purpose of comparing the results of JAX implementation"
+    "for the purpose of comparing the results of JAX implementation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d64016",
+   "id": "d5a0216d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from numba import prange, njit\n",
     "from interpolation import interp\n",
-    "from scipy.optimize import minimize_scalar, bisect"
+    "from quantecon.optimize import brent_max"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233b314d",
+   "id": "8750efe9",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def maximize(g, a, b, args):\n",
+    "CEMN = namedtuple('CakeEatingModelNumba',\n",
+    "                    ('β', 'γ', 'x_grid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ac90c88",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "def create_cake_eating_model_numba(β=0.96,           # discount factor\n",
+    "                                   γ=1.5,            # degree of relative risk aversion\n",
+    "                                   x_grid_min=1e-3,  # exclude zero for numerical stability\n",
+    "                                   x_grid_max=2.5,   # size of cake\n",
+    "                                   x_grid_size=200):\n",
+    "    x_grid = np.linspace(x_grid_min, x_grid_max, x_grid_size)\n",
+    "    return CEMN(β=β, γ=γ, x_grid=x_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9c0293f",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "# Utility function\n",
+    "@njit\n",
+    "def u_numba(c, cem):\n",
+    "    return (c ** (1 - cem.γ)) / (1 - cem.γ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8729dfd1",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "@njit\n",
+    "def state_action_value_numba(c, x, v_array, cem):\n",
     "    \"\"\"\n",
-    "    Maximize the function g over the interval [a, b].\n",
-    "\n",
-    "    We use the fact that the maximizer of g on any interval is\n",
-    "    also the minimizer of -g.  The tuple args collects any extra\n",
-    "    arguments to g.\n",
-    "\n",
-    "    Returns the maximal value and the maximizer.\n",
+    "    Right hand side of the Bellman equation given x and c.\n",
+    "    * x: scalar element `x`\n",
+    "    * c: consumption\n",
+    "    * v_array: value function array guess, 1-D array\n",
+    "    * cem: Cake Eating Numba Model instance\n",
     "    \"\"\"\n",
-    "\n",
-    "    objective = lambda x: -g(x, *args)\n",
-    "    result = minimize_scalar(objective, bounds=(a, b), method='bounded')\n",
-    "    maximizer, maximum = result.x, -result.fun\n",
-    "    return maximizer, maximum"
+    "    return u_numba(c, cem) + cem.β * interp(cem.x_grid, v_array, x - c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b984134",
+   "id": "8c571875",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "class CakeEating:\n",
-    "\n",
-    "    def __init__(self,\n",
-    "                 β=0.96,           # discount factor\n",
-    "                 γ=1.5,            # degree of relative risk aversion\n",
-    "                 x_grid_min=1e-3,  # exclude zero for numerical stability\n",
-    "                 x_grid_max=2.5,   # size of cake\n",
-    "                 x_grid_size=200):\n",
-    "\n",
-    "        self.β, self.γ = β, γ\n",
-    "\n",
-    "        # Set up grid\n",
-    "        self.x_grid = np.linspace(x_grid_min, x_grid_max, x_grid_size)\n",
-    "\n",
-    "    # Utility function\n",
-    "    def u(self, c):\n",
-    "\n",
-    "        γ = self.γ\n",
-    "\n",
-    "        if γ == 1:\n",
-    "            return np.log(c)\n",
-    "        else:\n",
-    "            return (c ** (1 - γ)) / (1 - γ)\n",
-    "\n",
-    "    # first derivative of utility function\n",
-    "    def u_prime(self, c):\n",
-    "\n",
-    "        return c ** (-self.γ)\n",
-    "\n",
-    "    def state_action_value(self, c, x, v_array):\n",
-    "        \"\"\"\n",
-    "        Right hand side of the Bellman equation given x and c.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        u, β = self.u, self.β\n",
-    "        v = lambda x: interp(self.x_grid, v_array, x)\n",
-    "\n",
-    "        return u(c) + β * v(x - c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94771925",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "def T_np(v, ce):\n",
+    "@njit\n",
+    "def T_numba(v, ce):\n",
     "    \"\"\"\n",
     "    The Bellman operator.  Updates the guess of the value function.\n",
     "\n",
-    "    * ce is an instance of CakeEating\n",
+    "    * ce is an instance of CakeEatingNumba Model\n",
     "    * v is an array representing a guess of the value function\n",
     "\n",
     "    \"\"\"\n",
     "    v_new = np.empty_like(v)\n",
     "\n",
-    "    for i, x in enumerate(ce.x_grid):\n",
+    "    for i in prange(len(ce.x_grid)):\n",
     "        # Maximize RHS of Bellman equation at state x\n",
-    "        v_new[i] = maximize(ce.state_action_value, 1e-10, x, (x, v))[1]\n",
-    "\n",
+    "        v_new[i] = brent_max(state_action_value_numba, 1e-10, ce.x_grid[i],\n",
+    "                             args=(ce.x_grid[i], v, ce))[1]\n",
     "    return v_new"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc46ba3e",
+   "id": "a349fe9b",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def compute_value_function_np(ce,\n",
+    "def compute_value_function_numba(ce,\n",
     "                           tol=1e-4,\n",
     "                           max_iter=1000,\n",
     "                           verbose=True,\n",
@@ -715,7 +709,7 @@
     "    error = tol + 1\n",
     "\n",
     "    while i < max_iter and error > tol:\n",
-    "        v_new = T_np(v, ce)\n",
+    "        v_new = T_numba(v, ce)\n",
     "\n",
     "        error = np.max(np.abs(v - v_new))\n",
     "        i += 1\n",
@@ -736,45 +730,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01e3ead",
+   "id": "adcfd968",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "ce = CakeEating()"
+    "cen = create_cake_eating_model_numba()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f354e7e",
+   "id": "34daccba",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "in_time = time.time()\n",
-    "v_np = compute_value_function_np(ce)\n",
-    "np_time = time.time() - in_time"
+    "v_np = compute_value_function_numba(cen)\n",
+    "numba_time = time.time() - in_time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2bcdb87",
+   "id": "ffb942cf",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "ratio = np_time/jax_time\n",
-    "print(f\"JAX implementation is {ratio} times faster than NumPy.\")"
+    "ratio = numba_time/jax_time\n",
+    "print(f\"JAX implementation is {ratio} times faster than NumPy.\")\n",
+    "print(f\"JAX time: {jax_time}\")\n",
+    "print(f\"Numba time: {numba_time}\")"
    ]
   }
  ],
  "metadata": {
-  "date": 1688450071.189786,
+  "date": 1691989745.6252625,
   "filename": "cake_eating_numerical.md",
   "kernelspec": {
    "display_name": "Python",
