--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0cd61e74",
+   "id": "0861aa1a",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f71c503d",
+   "id": "6a31cf6d",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -28,19 +28,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a0153fe",
+   "id": "d5f2b5c3",
    "metadata": {},
    "source": [
     "# Simulation\n",
     "\n",
     "- [Inventory Dynamics](https://jax.quantecon.org/inventory_dynamics.html)\n",
+    "- [Inventory Management Model](https://jax.quantecon.org/inventory_ssd.html)\n",
     "- [Kesten Processes and Firm Dynamics](https://jax.quantecon.org/kesten_processes.html)\n",
     "- [Wealth Distribution Dynamics](https://jax.quantecon.org/wealth_dynamics.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "af396ffe",
+   "id": "b663fde5",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59bbe479",
+   "id": "f81ee291",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfaccea",
+   "id": "44f25991",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -78,7 +79,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.2509968,
+  "date": 1691989745.7852535,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
