--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a731042e",
+   "id": "3c703959",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1268a5be",
+   "id": "5628f993",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b3913dd",
+   "id": "619df06f",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfdc0c7",
+   "id": "98ed9f45",
    "metadata": {},
    "source": [
     "A monopolist faces inverse demand\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876b4889",
+   "id": "4a5a38a2",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78bd0d23",
+   "id": "868e3f98",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ddba4bd",
+   "id": "3fee1832",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d6b32c",
+   "id": "3f174bde",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c436d2",
+   "id": "5ebac7af",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb317966",
+   "id": "5d6dacb3",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36dd0285",
+   "id": "d0f2ae42",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7852ce98",
+   "id": "6bcea875",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef329ca7",
+   "id": "e10a23bb",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152acc8e",
+   "id": "2330c798",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2277b29",
+   "id": "b1231475",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea90ed4",
+   "id": "464515da",
    "metadata": {},
    "source": [
     "Define a function to compute the current rewards given policy $ \\sigma $."
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d54afa",
+   "id": "7d53b18c",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4563ed9",
+   "id": "866d36d9",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04afa9cf",
+   "id": "bac733d0",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4789ecee",
+   "id": "91101889",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c71c7e",
+   "id": "eb63e247",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a30c564",
+   "id": "2331a2dc",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3771a20",
+   "id": "97f127bb",
    "metadata": {
     "hide-output": false
    },
@@ -401,14 +401,14 @@
     "    # Calculate the expected sum Σ_jp v[σ[i, j], jp] * Q[i, j, jp]\n",
     "    Ev = jnp.sum(V * Q, axis=2)\n",
     "\n",
-    "    return r_σ + β * jnp.sum(V * Q, axis=2)\n",
+    "    return r_σ + β * Ev\n",
     "\n",
     "T_σ = jax.jit(T_σ, static_argnums=(3,))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dbd393ae",
+   "id": "41bb4fef",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b1aacb6",
+   "id": "e66d6205",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e99b1e4",
+   "id": "891e6c8d",
    "metadata": {},
    "source": [
     "Define a function to get the value $ v_{\\sigma} $ of policy\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de8d8d1e",
+   "id": "facd19f4",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed8b7ab",
+   "id": "14573867",
    "metadata": {},
    "source": [
     "Now we define the solvers, which implement VFI, HPI and OPI."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676a4d80",
+   "id": "b801a3cd",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d89ec78",
+   "id": "56b27798",
    "metadata": {
     "hide-output": false
    },
@@ -562,7 +562,6 @@
     "\n",
     "def policy_iteration(model, maxiter=250):\n",
     "    constants, sizes, arrays = model\n",
-    "    vz = jnp.zeros(sizes)\n",
     "    σ = jnp.zeros(sizes, dtype=int)\n",
     "    i, error = 0, 1.0\n",
     "    while error > 0 and i < maxiter:\n",
@@ -578,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fbeba14",
+   "id": "01a37764",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf9aff0",
+   "id": "81918f8f",
    "metadata": {
     "hide-output": false
    },
@@ -620,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "060d665f",
+   "id": "08c4619b",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "383160de",
+   "id": "d507027f",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3987d8a0",
+   "id": "4beee13e",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -662,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5e4511",
+   "id": "843d2fd2",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb87ff7",
+   "id": "f90585a9",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2126e53",
+   "id": "be19550c",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -705,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "188ea9a0",
+   "id": "1bd2d983",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4093069b",
+   "id": "526e4496",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb42294c",
+   "id": "624cf0ef",
    "metadata": {
     "hide-output": false
    },
@@ -750,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe19409",
+   "id": "d90eb57c",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0102091a",
+   "id": "d75b8129",
    "metadata": {
     "hide-output": false
    },
@@ -789,7 +788,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.7007954,
+  "date": 1691989746.1567423,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
