--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39f9f513",
+   "id": "bd2729e7",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df6137a",
+   "id": "b63fe1c0",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad030e40",
+   "id": "2f41c0de",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a6306e",
+   "id": "5ff94860",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd223463",
+   "id": "f4d12d3a",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d13a4a",
+   "id": "2ad1bdf2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb79263",
+   "id": "0d0665c0",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697e254a",
+   "id": "1bc365d3",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "598a2548",
+   "id": "5867e261",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a5a61d",
+   "id": "4bc3806e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c42a27d1",
+   "id": "3190ff8c",
    "metadata": {
     "hide-output": false
    },
@@ -148,7 +148,7 @@
     "                      tolerance=1e-6,        # Error tolerance\n",
     "                      max_iter=10_000,       # Max iteration bound\n",
     "                      print_step=25,         # Print at multiples\n",
-    "                      verbose=False): \n",
+    "                      verbose=False):\n",
     "    x = x_0\n",
     "    error = tolerance + 1\n",
     "    k = 1\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd60700",
+   "id": "d00624b8",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -179,20 +179,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feec97ea",
+   "id": "13577579",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "Model = namedtuple('Model', \n",
+    "Model = namedtuple('Model',\n",
     "                    ('β', 'R', 'γ', 'w_grid', 'y_grid', 'Q'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce275a63",
+   "id": "7d27f39f",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
     "    A function that takes in parameters and returns an instance of Model that\n",
     "    contains data for the optimal savings problem.\n",
     "    \"\"\"\n",
-    "    w_grid = jnp.linspace(w_min, w_max, w_size)  \n",
+    "    w_grid = jnp.linspace(w_min, w_max, w_size)\n",
     "    mc = qe.tauchen(n=y_size, rho=ρ, sigma=ν)\n",
     "    y_grid, Q = jnp.exp(mc.state_values), mc.P\n",
     "    return Model(β=β, R=R, γ=γ, w_grid=w_grid, y_grid=y_grid, Q=Q)"
@@ -218,13 +218,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88a6d65e",
+   "id": "7cf430ba",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def create_consumption_model_jax(R=1.01,                    # Gross interest rate\n",
+    "def create_consumption_model_jax(R=1.01,                # Gross interest rate\n",
     "                             β=0.98,                    # Discount factor\n",
     "                             γ=2.5,                     # CRRA parameter\n",
     "                             w_min=0.01,                # Min wealth\n",
@@ -232,8 +232,8 @@
     "                             w_size=150,                # Grid side\n",
     "                             ρ=0.9, ν=0.1, y_size=100): # Income parameters\n",
     "    \"\"\"\n",
-    "    A function that takes in parameters and returns a JAX-compatible version of Model that\n",
-    "    contains data for the optimal savings problem.\n",
+    "    A function that takes in parameters and returns a JAX-compatible version of\n",
+    "    Model that contains data for the optimal savings problem.\n",
     "    \"\"\"\n",
     "    w_grid = jnp.linspace(w_min, w_max, w_size)\n",
     "    mc = qe.tauchen(n=y_size, rho=ρ, sigma=ν)\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ef495a",
+   "id": "56c0e445",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e0a8fac",
+   "id": "6473d0ce",
    "metadata": {
     "hide-output": false
    },
@@ -263,7 +263,7 @@
    "source": [
     "def B(v, constants, sizes, arrays):\n",
     "    \"\"\"\n",
-    "    A vectorized version of the right-hand side of the Bellman equation \n",
+    "    A vectorized version of the right-hand side of the Bellman equation\n",
     "    (before maximization), which is a 3D array representing\n",
     "\n",
     "        B(w, y, w′) = u(Rw + y - w′) + β Σ_y′ v(w′, y′) Q(y, y′)\n",
@@ -271,7 +271,7 @@
     "    for all (w, y, w′).\n",
     "    \"\"\"\n",
     "\n",
-    "    # Unpack \n",
+    "    # Unpack\n",
     "    β, R, γ = constants\n",
     "    w_size, y_size = sizes\n",
     "    w_grid, y_grid, Q = arrays\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f64f9ae7",
+   "id": "ccb2df42",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a28d636",
+   "id": "5d1f944e",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9595b47d",
+   "id": "8eac1044",
    "metadata": {
     "hide-output": false
    },
@@ -354,20 +354,20 @@
     "    yp_idx = jnp.arange(y_size)\n",
     "    yp_idx = jnp.reshape(yp_idx, (1, 1, y_size))\n",
     "    σ = jnp.reshape(σ, (w_size, y_size, 1))\n",
-    "    V = v[σ, yp_idx]      \n",
+    "    V = v[σ, yp_idx]\n",
     "\n",
-    "    # Convert Q[j, jp] to Q[i, j, jp] \n",
+    "    # Convert Q[j, jp] to Q[i, j, jp]\n",
     "    Q = jnp.reshape(Q, (1, y_size, y_size))\n",
     "\n",
     "    # Calculate the expected sum Σ_jp v[σ[i, j], jp] * Q[i, j, jp]\n",
     "    Ev = jnp.sum(V * Q, axis=2)\n",
     "\n",
-    "    return r_σ + β * jnp.sum(V * Q, axis=2)"
+    "    return r_σ + β * Ev"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f071291",
+   "id": "dde70301",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d0e829",
+   "id": "d46f9556",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521bc193",
+   "id": "2698befa",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad5d06be",
+   "id": "8ab55d06",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50bd9cc7",
+   "id": "2ea516a7",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -450,32 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ef33250",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "def get_value(σ, constants, sizes, arrays):\n",
-    "    \"Get the value v_σ of policy σ by inverting the linear map R_σ.\"\n",
-    "\n",
-    "    # Unpack \n",
-    "    β, R, γ = constants\n",
-    "    w_size, y_size = sizes\n",
-    "    w_grid, y_grid, Q = arrays\n",
-    "\n",
-    "    r_σ = compute_r_σ(σ, constants, sizes, arrays)\n",
-    "\n",
-    "    # Reduce R_σ to a function in v\n",
-    "    partial_R_σ = lambda v: R_σ(v, σ, constants, sizes, arrays)\n",
-    "\n",
-    "    return jax.scipy.sparse.linalg.bicgstab(partial_R_σ, r_σ)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d82b016",
+   "id": "782668d5",
    "metadata": {
     "hide-output": false
    },
@@ -483,11 +458,11 @@
    "source": [
     "def R_σ(v, σ, constants, sizes, arrays):\n",
     "    \"\"\"\n",
-    "    The value v_σ of a policy σ is defined as \n",
+    "    The value v_σ of a policy σ is defined as\n",
     "\n",
     "        v_σ = (I - β P_σ)^{-1} r_σ\n",
     "\n",
-    "    Here we set up the linear map v -> R_σ v, where R_σ := I - β P_σ. \n",
+    "    Here we set up the linear map v -> R_σ v, where R_σ := I - β P_σ.\n",
     "\n",
     "    In the consumption problem, this map can be expressed as\n",
     "\n",
@@ -517,8 +492,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f819df9",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_value(σ, constants, sizes, arrays):\n",
+    "    \"Get the value v_σ of policy σ by inverting the linear map R_σ.\"\n",
+    "\n",
+    "    # Unpack\n",
+    "    β, R, γ = constants\n",
+    "    w_size, y_size = sizes\n",
+    "    w_grid, y_grid, Q = arrays\n",
+    "\n",
+    "    r_σ = compute_r_σ(σ, constants, sizes, arrays)\n",
+    "\n",
+    "    # Reduce R_σ to a function in v\n",
+    "    partial_R_σ = lambda v: R_σ(v, σ, constants, sizes, arrays)\n",
+    "\n",
+    "    return jax.scipy.sparse.linalg.bicgstab(partial_R_σ, r_σ)[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e0a6af76",
+   "id": "0ce5eedb",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2e12f3",
+   "id": "83fd66e7",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af0362c",
+   "id": "5547ec6f",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -555,15 +555,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa0e9eae",
+   "id": "08946464",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def value_iteration(model, tol=1e-5):\n",
-    "    \"Implements VFI.\"\n",
+    "# Implements VFI-Value Function iteration\n",
     "\n",
+    "def value_iteration(model, tol=1e-5):\n",
     "    constants, sizes, arrays = model\n",
     "    _T = lambda v: T(v, constants, sizes, arrays)\n",
     "    vz = jnp.zeros(sizes)\n",
@@ -575,19 +575,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf136f4",
+   "id": "6eb91cd2",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def policy_iteration(model):\n",
-    "    \"Howard policy iteration routine.\"\n",
+    "# Implements HPI-Howard policy iteration routine\n",
+    "\n",
+    "def policy_iteration(model, maxiter=250):\n",
     "    constants, sizes, arrays = model\n",
-    "    vz = jnp.zeros(sizes)\n",
     "    σ = jnp.zeros(sizes, dtype=int)\n",
     "    i, error = 0, 1.0\n",
-    "    while error > 0:\n",
+    "    while error > 0 and i < maxiter:\n",
     "        v_σ = get_value(σ, constants, sizes, arrays)\n",
     "        σ_new = get_greedy(v_σ, constants, sizes, arrays)\n",
     "        error = jnp.max(jnp.abs(σ_new - σ))\n",
@@ -600,14 +600,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fb61d3a",
+   "id": "d86eaa7d",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
+    "# Implements the OPI-Optimal policy Iteration routine\n",
+    "\n",
     "def optimistic_policy_iteration(model, tol=1e-5, m=10):\n",
-    "    \"Implements the OPI routine.\"\n",
     "    constants, sizes, arrays = model\n",
     "    v = jnp.zeros(sizes)\n",
     "    error = tol + 1\n",
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b87a5f",
+   "id": "7cc30d68",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -633,20 +634,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8366f96",
+   "id": "6f0f2ba6",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "fontsize=12\n",
+    "fontsize = 12\n",
     "model = create_consumption_model_jax()\n",
-    "# Unpack \n",
+    "# Unpack\n",
     "constants, sizes, arrays = model\n",
     "β, R, γ = constants\n",
     "w_size, y_size = sizes\n",
-    "w_grid, y_grid, Q = arrays\n",
+    "w_grid, y_grid, Q = arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd410b0",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "σ_star = policy_iteration(model)\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(9, 5.2))\n",
     "ax.plot(w_grid, w_grid, \"k--\", label=\"45\")\n",
     "ax.plot(w_grid, w_grid[σ_star[:, 1]], label=\"$\\\\sigma^*(\\cdot, y_1)$\")\n",
@@ -657,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b773ebe3",
+   "id": "c328c42b",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -668,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c3c31a",
+   "id": "7a1dad48",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6012bf24",
+   "id": "6c1434e7",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "598fe51d",
+   "id": "31c863cb",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ffb5ef",
+   "id": "6387dddb",
    "metadata": {
     "hide-output": false
    },
@@ -728,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd94b2d4",
+   "id": "a50ad820",
    "metadata": {
     "hide-output": false
    },
@@ -740,8 +753,18 @@
     "    end_time = time.time()\n",
     "    elapsed_time = end_time - start_time\n",
     "    print(f\"{algorithm.__name__} completed in {elapsed_time:.2f} seconds.\")\n",
-    "    return result, elapsed_time\n",
-    "\n",
+    "    return result, elapsed_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e030f6",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "model = create_consumption_model_jax()\n",
     "σ_pi, pi_time = run_algorithm(policy_iteration, model)\n",
     "σ_vfi, vfi_time = run_algorithm(value_iteration, model, tol=1e-5)\n",
@@ -750,8 +773,18 @@
     "opi_times = []\n",
     "for m in m_vals:\n",
     "    σ_opi, opi_time = run_algorithm(optimistic_policy_iteration, model, m=m, tol=1e-5)\n",
-    "    opi_times.append(opi_time)\n",
-    "\n",
+    "    opi_times.append(opi_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff5e80e6",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(figsize=(9, 5.2))\n",
     "ax.plot(m_vals, jnp.full(len(m_vals), pi_time), lw=2, label=\"Howard policy iteration\")\n",
     "ax.plot(m_vals, jnp.full(len(m_vals), vfi_time), lw=2, label=\"value function iteration\")\n",
@@ -764,7 +797,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.734216,
+  "date": 1691989746.190374,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
