--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a366bd97",
+   "id": "8c323314",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc1aa1a",
+   "id": "2ea1c795",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c626454",
+   "id": "bc29e11c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b0b580a",
+   "id": "2397428d",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b3a3ee",
+   "id": "6d41d835",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333a3d3c",
+   "id": "70593c49",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906332d6",
+   "id": "1182d5be",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b59cdcd4",
+   "id": "b0c1956d",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -99,7 +99,7 @@
     "\n",
     "<a id='equation-spguess'></a>\n",
     "$$\n",
-    "J_0(v) = 0 \\text{ for all } v \\tag{9.1}\n",
+    "J_0(v) = 0 \\text{ for all } v \\tag{10.1}\n",
     "$$\n",
     "\n",
     "Now\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b29fd4",
+   "id": "8955ab07",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc1cc14",
+   "id": "49e3e9ca",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b75f4b9",
+   "id": "a1ca9b19",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc172310",
+   "id": "080a49f0",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5bb820d",
+   "id": "24c4694f",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9316b084",
+   "id": "ce5150d3",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f346b84",
+   "id": "a636a13d",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "294fc32e",
+   "id": "ac4d972f",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc70c18",
+   "id": "4531844c",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd84fdb2",
+   "id": "95f8aeae",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aaebb55",
+   "id": "02fea7b5",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a1506b",
+   "id": "6a718cca",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163b5aa5",
+   "id": "cef6bee7",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,10 +296,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0fb1a4",
+   "id": "f20826af",
    "metadata": {},
    "source": [
-    "## Exercise 9.1\n",
+    "## Exercise 10.1\n",
     "\n",
     "The text below describes a weighted directed graph.\n",
     "\n",
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dc6bad4",
+   "id": "e12013c5",
    "metadata": {
     "hide-output": false
    },
@@ -431,10 +431,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "401de9ed",
+   "id": "0ddbd943",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#short_path_ex1)\n",
+    "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#short_path_ex1)\n",
     "\n",
     "First let’s write a function that reads in the graph data above and builds a distance matrix."
    ]
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a2613e",
+   "id": "36f8fbe7",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c067f8",
+   "id": "faf7d241",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6987e18a",
+   "id": "50ad0efe",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40f7e9cd",
+   "id": "8867a025",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe0f177",
+   "id": "2856f379",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb47ae4",
+   "id": "12a648ac",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd373721",
+   "id": "4cd404ea",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a91a1f",
+   "id": "40d7d49a",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4540da08",
+   "id": "aabacdf3",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c21246a",
+   "id": "8c5d198d",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcd768ca",
+   "id": "9f00f7c7",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bcf462",
+   "id": "3e2ca813",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdefd8f7",
+   "id": "8b5baaa4",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.763418,
+  "date": 1691989746.2198765,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
