--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9e2691c",
+   "id": "2f455981",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a8e95f",
+   "id": "393f6cf9",
    "metadata": {},
    "source": [
     "# Troubleshooting"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f47b4c",
+   "id": "48595c67",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b57f3e5e",
+   "id": "a0a8b1de",
    "metadata": {},
    "source": [
     "This page is for readers experiencing errors when running the code from the lectures."
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8c3ee9",
+   "id": "832bac00",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8951a402",
+   "id": "dce5debf",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -98,7 +98,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.791637,
+  "date": 1691989746.2480323,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
