--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b041dd1b",
+   "id": "2af5f423",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "374ce23e",
+   "id": "fc79b548",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c4bf8df",
+   "id": "dcc7ef67",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3571739",
+   "id": "6084f736",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79177e97",
+   "id": "95cd8a2c",
    "metadata": {
     "hide-output": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6df7ba7",
+   "id": "42ddd5d1",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11bf5120",
+   "id": "09470260",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8146f70b",
+   "id": "17ee8505",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b52816b",
+   "id": "15545459",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194426a5",
+   "id": "06ab28c1",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a62ff7ad",
+   "id": "380bcffd",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38be654",
+   "id": "c4db1391",
    "metadata": {
     "hide-output": false
    },
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0be110",
+   "id": "c4ab0be0",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648ef526",
+   "id": "aaa54380",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad34f44c",
+   "id": "fdb854e2",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4bae52",
+   "id": "6baa3a99",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f5b5d96",
+   "id": "f48f9266",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0159aa1",
+   "id": "6eba13bb",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24bd8056",
+   "id": "ba0aef10",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6dfea1a",
+   "id": "56ec49a5",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab10acf4",
+   "id": "2ac5f630",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "184f24eb",
+   "id": "ade9f2bc",
    "metadata": {
     "hide-output": false
    },
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aa2690a",
+   "id": "36665ea0",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec86963",
+   "id": "6ac9e325",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb92ac9",
+   "id": "6626dcb2",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -352,7 +352,7 @@
     "\n",
     "<a id='equation-wealth-dynam-ah'></a>\n",
     "$$\n",
-    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{7.1}\n",
+    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{8.1}\n",
     "$$\n",
     "\n",
     "where\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f751e1",
+   "id": "3c37243d",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60ebce29",
+   "id": "b7cf36b2",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe828fcd",
+   "id": "87a83c51",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678b868f",
+   "id": "774dbb51",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d287bd3",
+   "id": "3292107d",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cf689aa",
+   "id": "f1348c6a",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f1134e6",
+   "id": "96e2788b",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "546802ab",
+   "id": "f1fbfea2",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b80c963",
+   "id": "f1db4ddc",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1442213d",
+   "id": "def75a4a",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b49e2a01",
+   "id": "b889cdc3",
    "metadata": {
     "hide-output": false
    },
@@ -561,33 +561,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7695a0d8",
-   "metadata": {},
-   "source": [
-    "Running the above function again will be even faster because of JAX’s JIT."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af563b4e",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "# 2nd time is expected to be very fast because of JIT\n",
-    "w_jax_result = wealth_time_series_scan_jax(wdy.y_mean,\n",
-    "                                               ts_length, wdy, size).block_until_ready()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3de6eebd",
+   "id": "c14f768a",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f9f111f",
+   "id": "aa97d924",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -609,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81ca961d",
+   "id": "99a874b8",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c8b0d4",
+   "id": "8fd9f496",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -664,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41cec1ee",
+   "id": "64a104a8",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3543755a",
+   "id": "799a61d5",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02008eb0",
+   "id": "2ae04006",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -700,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e7f6d1",
+   "id": "69705d54",
    "metadata": {
     "hide-output": false
    },
@@ -709,13 +685,13 @@
     "%%time\n",
     "\n",
     "# 2nd time is expected to be very fast because of JIT\n",
-    "w_jax_result = wealth_time_series_for_loop_jax(wdy.y_mean, ts_length, wdy, size).block_until_ready()"
+    "w_jax_result = wealth_time_series_jax(wdy.y_mean, ts_length, wdy, size).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56497559",
+   "id": "5bbf77b7",
    "metadata": {
     "hide-output": false
    },
@@ -728,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60da1ff7",
+   "id": "bfbb9d0b",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -737,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980e7216",
+   "id": "1808e267",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a41ac8",
+   "id": "fe28d567",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -778,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4221ca1",
+   "id": "97341931",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -792,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4edd58e3",
+   "id": "caa2573c",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd4d9790",
+   "id": "60c9495d",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -826,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7205e4f4",
+   "id": "8776620a",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c8f80ea",
+   "id": "3dae376d",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -862,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b012432d",
+   "id": "2dbc8e69",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0961ca4b",
+   "id": "f0963cdc",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -890,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5b442a",
+   "id": "c2e024ce",
    "metadata": {
     "hide-output": false
    },
@@ -915,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1186636f",
+   "id": "773d4c65",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -923,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c859b1",
+   "id": "1b7e4e0e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -931,10 +907,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8576b9f",
+   "id": "fcc42db2",
    "metadata": {},
    "source": [
-    "## Exercise 7.1\n",
+    "## Exercise 8.1\n",
     "\n",
     "For a wealth or income distribution with Pareto tail, a higher tail index suggests lower inequality.\n",
     "\n",
@@ -956,10 +932,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dea43b",
+   "id": "0067b42a",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
+    "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#wd_ex1)\n",
     "\n",
     "Here is one solution, which produces a good match between theory and\n",
     "simulation."
@@ -968,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0d27352",
+   "id": "05848cfc",
    "metadata": {
     "hide-output": false
    },
@@ -992,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e651e5",
+   "id": "8f47a410",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -1005,17 +981,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fe093f",
+   "id": "f69cb51a",
    "metadata": {},
    "source": [
-    "## Exercise 7.2\n",
+    "## Exercise 8.2\n",
     "\n",
     "When savings is constant, the wealth process has the same quasi-linear\n",
     "structure as a Kesten process, with multiplicative and additive shocks.\n",
     "\n",
     "The Kesten–Goldie theorem tells us that Kesten processes have Pareto tails under a range of parameterizations.\n",
     "\n",
-    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(7.1)](#equation-wealth-dynam-ah) are not IID.\n",
+    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(8.1)](#equation-wealth-dynam-ah) are not IID.\n",
     "\n",
     "At the same time, given the similarities, perhaps Pareto tails will arise.\n",
     "\n",
@@ -1029,11 +1005,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a980a4b0",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "num_households = 250_000\n",
+    "T = 500 # Shift forward T periods\n",
+    "ψ_0 = jnp.full((num_households, ), wdy.y_mean) # Initial distribution"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "dd052c3a",
+   "id": "be8acc78",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
+    "## Solution to[ Exercise 8.2](https://jax.quantecon.org/#wd_ex2)\n",
     "\n",
     "First let’s generate the distribution:"
    ]
@@ -1041,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91150708",
+   "id": "8fd4ca44",
    "metadata": {
     "hide-output": false
    },
@@ -1058,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f999f6d4",
+   "id": "db255c7c",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1067,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9599a1",
+   "id": "c4f49dad",
    "metadata": {
     "hide-output": false
    },
@@ -1083,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a5b734",
+   "id": "61b6584e",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1092,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f4e70d",
+   "id": "81a9338e",
    "metadata": {
     "hide-output": false
    },
@@ -1110,7 +1100,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.8361697,
+  "date": 1691989746.404032,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
