--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97147bd9",
+   "id": "3c9435a9",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fd2965",
+   "id": "cdffc626",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb91dd9",
+   "id": "3b9d13ae",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c7b9db2",
+   "id": "99b54906",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a1daa07",
+   "id": "63a71f6a",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01020644",
+   "id": "ec56d28e",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4d63771",
+   "id": "53304a5d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1adef9d",
+   "id": "ff9d3498",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc3fc44",
+   "id": "d8ffe5b3",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9849665a",
+   "id": "934c765c",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8654d56c",
+   "id": "a8ff25fa",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f351d2d0",
+   "id": "3e506a9c",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52b15d1",
+   "id": "8ffb8189",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -196,7 +196,7 @@
     "\n",
     "<a id='equation-equation-aiy-rgk'></a>\n",
     "$$\n",
-    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{14.1}\n",
+    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{15.1}\n",
     "$$\n",
     "\n",
     "Using this expression and the firm’s first-order condition for labor, we can pin down\n",
@@ -205,7 +205,7 @@
     "\n",
     "<a id='equation-equation-aiy-wgr'></a>\n",
     "$$\n",
-    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{14.2}\n",
+    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{15.2}\n",
     "$$\n",
     "\n",
     "These parameters and equations are stored in the following class."
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01ff473",
+   "id": "d97f1d39",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eaab8dd",
+   "id": "cffb5a40",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f384bea",
+   "id": "15142b77",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84808134",
+   "id": "02e67e52",
    "metadata": {
     "hide-output": false
    },
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f4465ab",
+   "id": "b45c3e76",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a950f0",
+   "id": "759308a9",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c115b5f",
+   "id": "1dc66b6e",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ba5022",
+   "id": "e0ccd962",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f452a9cc",
+   "id": "750a1f2f",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9de136e",
+   "id": "84adce4f",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae54809",
+   "id": "a3f678aa",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47e97ae",
+   "id": "b510a759",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6afa5966",
+   "id": "cb187b21",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2853de5d",
+   "id": "ad1d95bc",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79013338",
+   "id": "298bc1d6",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41004eb5",
+   "id": "210bb960",
    "metadata": {},
    "source": [
     "The following function is used for optimistic policy iteration."
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1927e2",
+   "id": "09f2e4bc",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9935b868",
+   "id": "9942000c",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71885cf0",
+   "id": "a2b4de99",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5149ae",
+   "id": "68531a15",
    "metadata": {},
    "source": [
     "We can also solve the problem using optimistic policy iteration."
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e451016",
+   "id": "09cc81cf",
    "metadata": {
     "hide-output": false
    },
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10059772",
+   "id": "33538fd0",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ff728eb",
+   "id": "4890f49a",
    "metadata": {
     "hide-output": false
    },
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daffe118",
+   "id": "a7dd6ff4",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d35894",
+   "id": "b41bdd0e",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e808957b",
+   "id": "5f9c2c03",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5176af9",
+   "id": "4bddfebe",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a6c128c",
+   "id": "66b98411",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edd0e44",
+   "id": "9b7d69e6",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e56246b",
+   "id": "98f6df9f",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4c662a1",
+   "id": "72bdef16",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0426a1c",
+   "id": "66ecceb7",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01691456",
+   "id": "07eeadcf",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b160a6b",
+   "id": "856cc8af",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e60015ce",
+   "id": "d532e56a",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1a23bf",
+   "id": "98af44b3",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -923,7 +923,7 @@
     "In practice, once parameter values are set, we can check for an SREE by the following steps\n",
     "\n",
     "1. pick a proposed quantity $ K $ for aggregate capital  \n",
-    "1. determine corresponding prices, with interest rate $ r $ determined by [(14.1)](#equation-equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(14.2)](#equation-equation-aiy-wgr).  \n",
+    "1. determine corresponding prices, with interest rate $ r $ determined by [(15.1)](#equation-equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(15.2)](#equation-equation-aiy-wgr).  \n",
     "1. determine the common optimal savings policy of the households given these prices  \n",
     "1. compute aggregate capital as the mean of steady state capital given this savings policy  \n",
     "\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371d81d6",
+   "id": "f51af18a",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed87596",
+   "id": "ed669476",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fb45c6d",
+   "id": "a788d30c",
    "metadata": {
     "hide-output": false
    },
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc8b2ca",
+   "id": "25380889",
    "metadata": {
     "hide-output": false
    },
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bcbe025",
+   "id": "ea079081",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed5d10b",
+   "id": "fa8bbca7",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99166c2b",
+   "id": "53a3e39f",
    "metadata": {
     "hide-output": false
    },
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96442adf",
+   "id": "1989392a",
    "metadata": {
     "hide-output": false
    },
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116bebc6",
+   "id": "51327f15",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "268f7ccf",
+   "id": "96237cae",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fefbbe4f",
+   "id": "161215ed",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a77ef97",
+   "id": "71b42a90",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c82ee38",
+   "id": "62aadf8c",
    "metadata": {
     "hide-output": false
    },
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5208e768",
+   "id": "3b56a015",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29640e38",
+   "id": "82c1ba60",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1163,10 +1163,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bd0f48b",
+   "id": "b36080ff",
    "metadata": {},
    "source": [
-    "## Exercise 14.1\n",
+    "## Exercise 15.1\n",
     "\n",
     "Using the default household and firm model, produce a graph\n",
     "showing the behaviour of equilibrium capital stock with the increase in $ \\beta $."
@@ -1174,16 +1174,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ffbd50f",
+   "id": "d9f0b90f",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 14.1](https://jax.quantecon.org/#aygr_ex1)"
+    "## Solution to[ Exercise 15.1](https://jax.quantecon.org/#aygr_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e6eb507",
+   "id": "569ecde3",
    "metadata": {
     "hide-output": false
    },
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2106f4",
+   "id": "ef071f46",
    "metadata": {
     "hide-output": false
    },
@@ -1216,10 +1216,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7629b6",
+   "id": "9603aff9",
    "metadata": {},
    "source": [
-    "## Exercise 14.2\n",
+    "## Exercise 15.2\n",
     "\n",
     "Switch to the CRRA utility function\n",
     "\n",
@@ -1239,10 +1239,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb6134e5",
+   "id": "ac8da7a7",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 14.2](https://jax.quantecon.org/#aygr_ex2)\n",
+    "## Solution to[ Exercise 15.2](https://jax.quantecon.org/#aygr_ex2)\n",
     "\n",
     "Let’s define the utility function"
    ]
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a763a09c",
+   "id": "ec46bebe",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ae3ab49",
+   "id": "b1b62b60",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6647910b",
+   "id": "e2626d49",
    "metadata": {
     "hide-output": false
    },
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8efdbcff",
+   "id": "0f0562c8",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3654401",
+   "id": "c885db66",
    "metadata": {
     "hide-output": false
    },
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b07e464",
+   "id": "519871dc",
    "metadata": {
     "hide-output": false
    },
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b695fb30",
+   "id": "a06db158",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e54823e4",
+   "id": "8f4cab63",
    "metadata": {
     "hide-output": false
    },
@@ -1371,7 +1371,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.087598,
+  "date": 1691989745.5274124,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
