--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d9e37e9",
+   "id": "408a265f",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a885d8e4",
+   "id": "d935a0ef",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa0e031",
+   "id": "dd4d17fd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da91456f",
+   "id": "b7c4bc05",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef8ca934",
+   "id": "de4bbba8",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3445cc89",
+   "id": "94481e2d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8abceb06",
+   "id": "c048c355",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc9360f",
+   "id": "3b67f6e4",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f73554",
+   "id": "73b9058f",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ccb7e3",
+   "id": "14b11d4b",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf3ec62",
+   "id": "e5706dcd",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2948ae6",
+   "id": "56479aeb",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd3502b6",
+   "id": "9a902c05",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -257,7 +257,7 @@
     "           [R (a - c) + \\hat Y, \\, \\hat Y]\n",
     "           \\, , \\;\n",
     "           u'(a)\n",
-    "     \\right\\} \\tag{12.1}\n",
+    "     \\right\\} \\tag{13.1}\n",
     "$$\n",
     "\n",
     "It [can be shown that](https://python.quantecon.org/ifp.html)\n",
@@ -271,9 +271,9 @@
     "The EGM is a technique for computing the update $ K\\sigma $ given $ \\sigma $ along a grid of asset values.\n",
     "\n",
     "Notice that, since $ u'(a) \\to \\infty $ as $ a \\downarrow 0 $, the second term in\n",
-    "the max in [(12.1)](#equation-eq-kaper) dominates for sufficiently small $ a $.\n",
+    "the max in [(13.1)](#equation-eq-kaper) dominates for sufficiently small $ a $.\n",
     "\n",
-    "Also, again using [(12.1)](#equation-eq-kaper), we have $ c=a $ for all such $ a $.\n",
+    "Also, again using [(13.1)](#equation-eq-kaper), we have $ c=a $ for all such $ a $.\n",
     "\n",
     "Hence, for sufficiently small $ a $,\n",
     "\n",
@@ -319,7 +319,7 @@
     "        \\right\\}\n",
     "               & \\text{if } a > \\bar a (y) \\\\\n",
     "            a  & \\text{if } a \\leq \\bar a (y)\n",
-    "    \\end{cases} \\tag{12.2}\n",
+    "    \\end{cases} \\tag{13.2}\n",
     "$$\n",
     "\n",
     "We begin with an *exogenous* grid of saving values $ 0 = s_0 < \\ldots < s_{N-1} $\n",
@@ -340,7 +340,7 @@
     "        \\beta R \\, \\mathbb E_y (u' \\circ \\sigma) \\,\n",
     "               [R s_i + \\hat Y, \\, \\hat Y]\n",
     "     \\right\\}\n",
-    "     \\quad \\text{for all } i \\tag{12.3}\n",
+    "     \\quad \\text{for all } i \\tag{13.3}\n",
     "$$\n",
     "\n",
     "and we set\n",
@@ -349,9 +349,9 @@
     "a_i = s_i + c_i\n",
     "$$\n",
     "\n",
-    "We claim that each pair $ a_i, c_i $ obeys [(12.2)](#equation-eq-oro).\n",
+    "We claim that each pair $ a_i, c_i $ obeys [(13.2)](#equation-eq-oro).\n",
     "\n",
-    "Indeed, since $ s_i > 0 $, choosing $ c_i $ according to [(12.3)](#equation-eq-kaperc) gives\n",
+    "Indeed, since $ s_i > 0 $, choosing $ c_i $ according to [(13.3)](#equation-eq-kaperc) gives\n",
     "\n",
     "$$\n",
     "c_i\n",
@@ -377,14 +377,14 @@
     "     \\quad \\text{and} \\quad a_i > \\bar a(y)\n",
     "$$\n",
     "\n",
-    "Hence [(12.2)](#equation-eq-oro) holds.\n",
+    "Hence [(13.2)](#equation-eq-oro) holds.\n",
     "\n",
     "We are now ready to iterate with $ K $."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f6584fe8",
+   "id": "746a48bf",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef42f92",
+   "id": "785b3fdb",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3568ee61",
+   "id": "b8a89286",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99b3d1c",
+   "id": "dde75951",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "488abe9e",
+   "id": "58e0c0e8",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b36dd3",
+   "id": "818d3e62",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e8f03d",
+   "id": "1fda64d6",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f4ac76",
+   "id": "84121041",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edda581f",
+   "id": "c0e84c96",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93159b87",
+   "id": "edec999d",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628bde75",
+   "id": "26340562",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9fa14b4",
+   "id": "f16ee863",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9910ba8f",
+   "id": "b0fb1e9c",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a90217",
+   "id": "169806ec",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a52bfd6",
+   "id": "021f4a6a",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ebb4fa0",
+   "id": "41f5f3f2",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e6eb44",
+   "id": "96d1e735",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "696af673",
+   "id": "1d36fa08",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d54d6b4b",
+   "id": "abece5f6",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c81d2a",
+   "id": "5a56f5b7",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b8b0183",
+   "id": "8fb16cd0",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b1457f",
+   "id": "bf8ac487",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63e0034",
+   "id": "710abe52",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767658cd",
+   "id": "1a0654d1",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0180ae30",
+   "id": "500e07d0",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +872,7 @@
   }
  ],
  "metadata": {
-  "date": 1688450071.234652,
+  "date": 1691989745.7689428,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
